--- a/layouts/shortcodes/boka_laeknagardur.html
+++ b/layouts/shortcodes/boka_laeknagardur.html
@@ -4,13 +4,15 @@
     <button 
     style = "background-color:#005691; 
                 color: #fff;
-                margin-top:6px;
+                margin-top:10px;
                 margin-bottom:16px;
+                margin-left: 20px;
+                margin-right: 20px;
                 border-radius:4px;
-                font-size:1.6em;
-                padding:8px 20px;    
+                font-size:1.2em;
+                padding:10px 10px;    
                 font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
-                float:none !important;
+                float:right !important;
                 text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
         onClick = "Calendly.showPopupWidget('https://calendly.com/bgj2/laeknagardur');return false;">
          Bóka ráðgjöf
