bætti við post-bókunar síðu

--- a/layouts/shortcodes/boka_laeknagardur.html
+++ b/layouts/shortcodes/boka_laeknagardur.html
@@ -14,7 +14,7 @@
                 font-family: GibsonSemibold, Helvetica Neue, Helvetica, Arial, sans-serif;
                 float:right !important;
                 text-shadow:0 1px 1px rgba(0,0,0,0.2)" 
-        onClick = "Calendly.showPopupWidget('https://calendly.com/bgj2/laeknagardur');return false;">
+        onClick = "Calendly.showPopupWidget('https://calendly.com/trhvs/laeknagardur');return false;">
          Bóka ráðgjöf
     </button>
 </div>
